# LLMine-srv

./: .gitignore  LICENSE.txt  README.md  example.env  pyproject.toml
src/: api.py  engine.py  main.py  model.py
src/backend/: model_registry_dto.py
src/backend/engine/: __init__.py  _base_engine.py  engine_factory.py  gguf_embed_engine.py  gguf_llm_engine.py  lazy_loader.py  onnx_embed_engine.py  onnx_llm_engine.py  safetensors_embed_engine.py  safetensors_llm_engine.py
src/backend/model_registry/: __init__.py  base_model_registry.py  hf_model_registry.py  local_model_registry.py  model_registry_factory.py  ollama_model_registry.py
src/engine/: __init__.py  _base.py  embed_engine.py  model_engine.py
