[project]
name = "llmine-srv"
version = "0.1.0"
description = "LLM API inference server with OpenAI-compatible endpoints"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
    "keras>=3.13.2",
    "torch>=2.10.0",
]

[project.optional-dependencies]
dev  = ["pytest>=8.2.0", "httpx>=0.27.0", "ruff>=0.4.0"]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
